--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/rawdogtpm2", "crates/stage1", "crates/example-stage2"]
+members = ["crates/rawdogtpm2", "crates/rawdogtpm2-verify", "crates/stage1", "crates/example-stage2"]
 resolver = "2"
 
 [workspace.package]
@@ -18,6 +18,16 @@ anyhow = "1.0"
 thiserror = "1.0"
 hex = "0.4"
 libc = "0.2"
+
+# X.509 and crypto for verification
+der = { version = "0.7", features = ["alloc", "pem", "oid"] }
+spki = { version = "0.7", features = ["alloc"] }
+x509-cert = { version = "0.2", features = ["pem"] }
+p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
+p384 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
+ecdsa = { version = "0.16", features = ["verifying", "der"] }
+coset = "0.3"
+ciborium = "0.2"
 
 reqwest = { version = "=0.12.24", default-features = false, features = ["blocking", "rustls-tls-webpki-roots-no-provider"] }
 rustls = { version = "=0.23.23", default-features = false, features = ["std", "tls12"] }
