--- a/crates/rawdogtpm2-verify/Cargo.toml
+++ b/crates/rawdogtpm2-verify/Cargo.toml
@@ -25,6 +25,7 @@ ciborium = { workspace = true }
 # Common
 sha2 = { workspace = true }
 hex = { workspace = true }
+base64 = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
