--- a/crates/rawdogtpm2/Cargo.toml
+++ b/crates/rawdogtpm2/Cargo.toml
@@ -13,7 +13,7 @@ sha2 = { workspace = true }
 hmac = { workspace = true }
 base64 = { workspace = true }
 serde = { workspace = true }
-serde_cbor = { workspace = true }
+ciborium = { workspace = true }
 serde_bytes = { workspace = true }
 hex = { workspace = true }
 serde_json = { workspace = true }
