--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,7 +13,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get -qq update && \
     iptables \
     iproute2 \
     dnsmasq \
-    swtpm     
+    swtpm swtpm-tools
 
 # Install Claude Code
 #RUN curl -fsSL https://claude.ai/install.sh | bash
