--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/rawdogtpm2", "crates/rawdogtpm2-verify", "crates/stage1", "crates/example-stage2"]
+members = ["crates/stage1", "crates/example-stage2"]
 resolver = "2"
 
 [workspace.package]
@@ -8,25 +8,13 @@ license = "MIT OR Apache-2.0"
 [workspace.dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_bytes = "0.11"
 base64 = "0.22"
-sha1 = "0.10"
 sha2 = "0.10"
-hmac = "0.12"
 anyhow = "1.0"
-thiserror = "1.0"
 hex = "0.4"
 libc = "0.2"
 
-# X.509 and crypto for verification
-der = { version = "0.7", features = ["alloc", "pem", "oid"] }
-spki = { version = "0.7", features = ["alloc"] }
-x509-cert = { version = "0.2", features = ["pem"] }
-p256 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
-p384 = { version = "0.13", features = ["ecdsa", "pem", "pkcs8"] }
-ecdsa = { version = "0.16", features = ["verifying", "der"] }
-coset = "0.3"
-ciborium = "0.2"
+vaportpm-attest = { git = "https://github.com/lockboot/vaportpm" }
 
 reqwest = { version = "=0.12.24", default-features = false, features = ["blocking", "rustls-tls-webpki-roots-no-provider"] }
 rustls = { version = "=0.23.23", default-features = false, features = ["std", "tls12"] }
