--- a/crates/stage1/Cargo.toml
+++ b/crates/stage1/Cargo.toml
@@ -14,5 +14,5 @@ sha2 = { workspace = true }
 hex = { workspace = true }
 anyhow = { workspace = true }
 base64 = { workspace = true }
-rawdogtpm2 = { path = "../rawdogtpm2" }
+vaportpm-attest = { workspace = true }
 libc = { workspace = true }
