--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,15 +2,11 @@ name: build
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches: [main]
+    tags: ['v*']
+  pull_request:
+    branches: [main]
   workflow_dispatch:
-    inputs:
-      release-docker:
-        description: 'Build and push Docker image'
-        type: boolean
-        required: false
-        default: false
 
 jobs:
   build:
@@ -33,7 +29,6 @@ jobs:
           path: |
             ${{ matrix.arch }}/boot.disk
             ${{ matrix.arch }}/busybox
-            ${{ matrix.arch }}/bubblewrap
             ${{ matrix.arch }}/stage1
             ${{ matrix.arch }}/os-release
             ${{ matrix.arch }}/efi-vars.*
@@ -41,7 +36,7 @@ jobs:
   release-docker:
     runs-on: ubuntu-latest
     needs: build
-    if: inputs.release-docker
+    if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
       packages: write
