--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,31 +1,29 @@
 FROM lockboot:build
 
+RUN mkdir -p -m 755 /etc/apt/keyrings \
+	&& out=$(mktemp) && wget -nv -O$out https://cli.github.com/packages/githubcli-archive-keyring.gpg \
+	&& cat $out | tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null \
+	&& chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg \
+	&& mkdir -p -m 755 /etc/apt/sources.list.d \
+	&& echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+
 # Install development tools and Claude Code
 RUN DEBIAN_FRONTEND=noninteractive apt-get -qq update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+    procps nano net-tools iputils-ping ca-certificates less xz-utils openssh-client bash-completion \
     docker.io \
-    qemu-system-x86 \
-    qemu-system-arm \
+    qemu-utils qemu-system-x86 qemu-system-arm \
     git \
-    vim \
     build-essential \
     gpg \
     iptables \
     iproute2 \
     dnsmasq \
     swtpm swtpm-tools \
-    tpm2-tools
+    tpm2-tools xxd \
+    gh
 
-# Install Claude Code
-#RUN curl -fsSL https://claude.ai/install.sh | bash
-# Download the Claude Code binary manually
-ENV CLAUDE_CODE_URL=https://storage.googleapis.com/claude-code-dist-86c565f3-f756-42ad-8dfa-d59b1c096819
-RUN ARCH=$(uname -m | sed 's/x86_64/x64/; s/aarch64/arm64/') && \
-    wget -O claude-version ${CLAUDE_CODE_URL}/claude-code-releases/stable && \
-    VERSION=$(cat claude-version) && \
-    wget -O /usr/local/bin/claude "${CLAUDE_CODE_URL}/claude-code-releases/${VERSION}/linux-${ARCH}/claude" && \
-    chmod +x /usr/local/bin/claude
-ENV DISABLE_AUTOUPDATER=1
+RUN groupadd -g 1000 vscode-dc && useradd -u 1000 -g 1000 -d /src -s /bin/bash vscode-dc
 
 # Development environment - keep same reproducible build settings from base
 WORKDIR /src
