Made it work on GCP, upgrade to Fedora Core 41 for kernel + systemd-stub

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -26,7 +26,8 @@ RUN apt-get -qq update && \
     sbsigntool \
     util-linux \
     uuid-runtime \
-    wget && \
+    wget \
+    xz-utils && \
     pip3 install --break-system-packages virt-firmware
 
 # Reproducible builds environment
